hphp/hack/test/typecheck/awaitable_enum_switch_exhaustiveness.php.exp
File "awaitable_enum_switch_exhaustiveness.php", line 15, characters 13-17:
`switch` statement nonexhaustive; at least the following cases are missing: `B` (Typing[4019])
  File "awaitable_enum_switch_exhaustiveness.php", line 3, characters 6-19:
  Enum declared here
